[gd_scene load_steps=2 format=3 uid="uid://cdi1be4phvih8"]

[ext_resource type="Script" path="res://empty_one.gd" id="1_85x6v"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_85x6v")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -72.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 0
text = "Voltar"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -407.0
offset_top = -207.0
offset_right = -192.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 0
text = "Ataque 3
"

[node name="Button5" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 222.0
offset_top = -208.0
offset_right = 437.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 0
text = "Ataque 4
"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -406.0
offset_top = -310.0
offset_right = -191.0
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 0
text = "Ataque 1"

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 222.0
offset_top = -310.0
offset_right = 437.0
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 0
text = "Ataque 2
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
